--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,11 @@ dependencies {
     def springBootVersion = '1.5.2.RELEASE'
     
     // クライアント
-    compile group: "org.webjars", name: "jquery", version: "2.2.4"
+    compile group: 'org.webjars', name: 'webjars-locator', version: '0.32-1'
+    compile group: "org.webjars", name: "jquery", version: "3.2.0"
     compile group: "org.webjars.bower", name: "bootstrap", version: "3.3.7"
-    compile group: 'org.webjars', name: 'webjars-locator', version: '0.32'
+    compile group: 'org.webjars.npm', name: 'axios', version: '0.16.1'
+    
     
 
     // Spring framework
